# pymetaphone-br

./: .flake8  .gitignore  README.md  pyproject.toml
pymetaphone_br/: __init__.py  metaphone.py
tests/: test_metaphone.py
