[tool]
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
   __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''


[tool.poetry]
name = "pymetaphone-br"
version = "0.0.1"
description = "Pacote do algoritmo Metaphone para a língua portuguesa "

license = "LGPL"

authors = [
    "Bruno <bruno@escavador.com>"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
unidecode = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

